creusot/tests/should_fail/non_bool_assertion.stderr
error[E0308]: mismatched types
 --> non_bool_assertion.rs:5:21
  |
5 |     proof_assert! { 1 };
  |                     ^ expected `bool`, found `Int`

error: internal error

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
